Warnings fix